complete 將計算比例做優化 && 優化 select css

--- a/src/components/CoffeeList/style.scss
+++ b/src/components/CoffeeList/style.scss
@@ -121,6 +121,12 @@ select {
   .controlPanel{
     display: none;
   }
+  .controlPanelRange{
+    margin-bottom: 30px;
+    h4{
+      margin-bottom: 15px;
+    }
+  }
   &.isEdit {
     .controlPanel {
       display: block;
