--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -7,6 +7,71 @@ html,body{
   font-weight: bold;
 }
 
+// 客製化 rangeInput
+.rangeInput{
+  input[type=range]{
+    & {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 5px;
+      background: rgba(#d3d3d3,.5);
+      outline: none;
+      opacity: 0.7;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: $input-range-size;
+      height: $input-range-size;
+      background: #fff;
+      cursor: pointer;
+      border-radius: 50%;
+    }
+
+    &::-moz-range-thumb {
+      width: $input-range-size;
+      height: $input-range-size;
+      background: #fff;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+  }
+}
+// 客製下拉
+.dropDownList.dropDownList {
+  margin-bottom: 30px;
+  select{
+    display: block;
+    height: 100%;
+    width: 100%;
+    -webkit-appearance: none;
+    background-color: #fff;
+    padding: 8px;
+    outline: none;
+  }
+  position: relative;
+  &::after{
+    content: '';
+    display: block;
+    width: 0px;
+    height: 0px;
+    border: 5px solid transparent;
+    border-top-color: #222;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-25%);
+
+  }
+}
+
 h1,h2,h3,h4,h5,h6{
   font-weight: bold;
 }
@@ -48,4 +113,15 @@ input{
 .App {
   padding-top: 20px;
   padding-bottom: 30px;
+}
+
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
 }
